# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_python//sphinxdocs:sphinx_docs_library.bzl", "sphinx_docs_library")
load("//pw_build:compatibility.bzl", "incompatible_with_mcu")
load("//pw_unit_test:pw_cc_test.bzl", "pw_cc_test")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])

# Module configuration

cc_library(
    name = "config",
    hdrs = ["public/pw_allocator/config.h"],
    strip_include_prefix = "public",
    deps = [":config_override"],
)

label_flag(
    name = "config_override",
    build_setting_default = "//pw_build:default_module_config",
)

cc_library(
    name = "test_config",
    defines = [
        "PW_ALLOCATOR_STRICT_VALIDATION=1",
        "PW_ALLOCATOR_BLOCK_POISON_INTERVAL=4",
    ],
)

# Libraries

cc_library(
    name = "allocator",
    srcs = [
        "allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":deallocator",
        "//pw_result",
    ],
)

cc_library(
    name = "allocator_as_pool",
    srcs = [
        "allocator_as_pool.cc",
    ],
    hdrs = [
        "public/pw_allocator/allocator_as_pool.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":pool",
        "//pw_status",
    ],
)

cc_library(
    name = "best_fit",
    hdrs = ["public/pw_allocator/best_fit.h"],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        ":config",
        "//pw_allocator/block:detailed_block",
        "//pw_allocator/bucket:fast_sorted",
        "//pw_allocator/bucket:sorted",
    ],
)

cc_library(
    name = "best_fit_block_allocator",
    hdrs = ["public/pw_allocator/best_fit_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":best_fit",
        ":config",
    ],
)

cc_library(
    name = "block_allocator",
    srcs = ["block_allocator.cc"],
    hdrs = ["public/pw_allocator/block_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":fragmentation",
        "//pw_allocator/block:allocatable",
        "//pw_allocator/block:basic",
        "//pw_allocator/block:iterable",
        "//pw_allocator/block:poisonable",
        "//pw_allocator/block:with_layout",
        "//pw_assert",
        "//pw_bytes:alignment",
        "//pw_result",
        "//pw_status",
    ],
)

cc_library(
    name = "bucket_allocator",
    hdrs = [
        "public/pw_allocator/bucket_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        "//pw_allocator/block:detailed_block",
        "//pw_allocator/bucket:unordered",
        "//pw_status",
    ],
)

# TODO(b/376730645): Remove deprecated interfaces.
cc_library(
    name = "bucket_block_allocator",
    hdrs = ["public/pw_allocator/bucket_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [":bucket_allocator"],
)

cc_library(
    name = "buddy_allocator",
    srcs = [
        "buddy_allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/buddy_allocator.h",
    ],
    implementation_deps = [
        "//pw_assert",
        "//pw_bytes:alignment",
        "//third_party/fuchsia:stdcompat",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        "//pw_allocator/block:basic",
        "//pw_allocator/bucket:unordered",
        "//pw_bytes",
        "//pw_containers:vector",
        "//pw_status",
    ],
)

cc_library(
    name = "buffer",
    hdrs = [
        "public/pw_allocator/buffer.h",
    ],
    strip_include_prefix = "public",
    deps = [
        "//pw_assert",
        "//pw_bytes",
        "//pw_bytes:alignment",
        "//pw_result",
    ],
)

cc_library(
    name = "bump_allocator",
    srcs = [
        "bump_allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/bump_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":buffer",
        "//pw_bytes",
        "//pw_bytes:alignment",
    ],
)

cc_library(
    name = "chunk_pool",
    srcs = [
        "chunk_pool.cc",
    ],
    hdrs = [
        "public/pw_allocator/chunk_pool.h",
    ],
    implementation_deps = [
        ":buffer",
        "//pw_assert",
        "//pw_bytes:alignment",
        "//third_party/fuchsia:stdcompat",
    ],
    strip_include_prefix = "public",
    deps = [
        ":pool",
        "//pw_bytes",
        "//pw_result",
    ],
)

cc_library(
    name = "deallocator",
    srcs = [
        "unique_ptr.cc",
    ],
    hdrs = [
        "public/pw_allocator/capability.h",
        "public/pw_allocator/deallocator.h",
        "public/pw_allocator/layout.h",
        "public/pw_allocator/unique_ptr.h",
    ],
    strip_include_prefix = "public",
    deps = [
        "//pw_assert",
        "//pw_preprocessor",
        "//pw_result",
        "//pw_status",
    ],
)

# TODO(b/376730645): Remove deprecated interfaces.
cc_library(
    name = "dual_first_fit_block_allocator",
    hdrs = ["public/pw_allocator/dual_first_fit_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [":first_fit"],
)

cc_library(
    name = "fallback_allocator",
    srcs = [
        "fallback_allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/fallback_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":deallocator",
        "//pw_assert",
        "//pw_result",
        "//pw_status",
    ],
)

cc_library(
    name = "first_fit",
    hdrs = ["public/pw_allocator/first_fit.h"],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        ":config",
        "//pw_allocator/block:detailed_block",
        "//pw_allocator/bucket:sequenced",
    ],
)

# TODO(b/376730645): Remove deprecated interfaces.
cc_library(
    name = "first_fit_block_allocator",
    hdrs = ["public/pw_allocator/first_fit_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [":first_fit"],
)

cc_library(
    name = "fragmentation",
    srcs = ["fragmentation.cc"],
    hdrs = ["public/pw_allocator/fragmentation.h"],
    strip_include_prefix = "public",
)

cc_library(
    name = "freelist_heap",
    hdrs = [
        "public/pw_allocator/freelist_heap.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":bucket_allocator",
        "//pw_assert",
        "//pw_bytes",
        "//pw_preprocessor",
    ],
)

# TODO(b/376730645): Remove deprecated interfaces.
cc_library(
    name = "last_fit_block_allocator",
    hdrs = ["public/pw_allocator/last_fit_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [":first_fit"],
)

cc_library(
    name = "libc_allocator",
    srcs = [
        "libc_allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/libc_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
    ],
)

cc_library(
    name = "null_allocator",
    srcs = [
        "null_allocator.cc",
    ],
    hdrs = [
        "public/pw_allocator/null_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
    ],
)

cc_library(
    name = "pmr_allocator",
    srcs = ["pmr_allocator.cc"],
    hdrs = ["public/pw_allocator/pmr_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":config",
    ],
)

cc_library(
    name = "pool",
    hdrs = ["public/pw_allocator/pool.h"],
    strip_include_prefix = "public",
    deps = [
        ":deallocator",
        "//pw_bytes",
        "//pw_result",
    ],
)

cc_library(
    name = "synchronized_allocator",
    hdrs = [
        "public/pw_allocator/synchronized_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        "//pw_sync:lock_annotations",
        "//pw_sync:mutex",
    ],
)

cc_library(
    name = "tlsf_allocator",
    hdrs = ["public/pw_allocator/tlsf_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        ":config",
        "//pw_allocator/block:detailed_block",
        "//pw_allocator/bucket:fast_sorted",
        "//pw_allocator/bucket:sorted",
        "//third_party/fuchsia:stdcompat",
    ],
)

cc_library(
    name = "tracking_allocator",
    hdrs = [
        "public/pw_allocator/metrics.h",
        "public/pw_allocator/tracking_allocator.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        "//pw_assert",
        "//pw_metric:metric",
        "//pw_status",
    ],
)

cc_library(
    name = "typed_pool",
    hdrs = [
        "public/pw_allocator/typed_pool.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":chunk_pool",
        "//pw_bytes",
        "//pw_result",
    ],
)

cc_library(
    name = "worst_fit",
    hdrs = ["public/pw_allocator/worst_fit.h"],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        ":config",
        "//pw_allocator/block:detailed_block",
        "//pw_allocator/bucket:fast_sorted",
        "//pw_allocator/bucket:sorted",
    ],
)

cc_library(
    name = "worst_fit_block_allocator",
    hdrs = ["public/pw_allocator/worst_fit_block_allocator.h"],
    strip_include_prefix = "public",
    deps = [
        ":config",
        ":worst_fit",
    ],
)

# Test support

cc_library(
    name = "testing",
    testonly = True,
    hdrs = [
        "public/pw_allocator/testing.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        ":buffer",
        ":first_fit",
        ":test_config",
        ":tracking_allocator",
        "//pw_assert",
        "//pw_bytes",
        "//pw_result",
        "//pw_status",
        "//pw_sync:mutex",
        "//pw_unit_test",
    ],
)

cc_library(
    name = "block_allocator_testing",
    testonly = True,
    srcs = [
        "block_allocator_testing.cc",
    ],
    hdrs = [
        "public/pw_allocator/block_allocator_testing.h",
    ],
    implementation_deps = [
        "//pw_assert",
        "//pw_bytes:alignment",
        "//pw_status",
        "//third_party/fuchsia:stdcompat",
    ],
    strip_include_prefix = "public",
    deps = [
        ":block_allocator",
        ":fuzzing",
        "//pw_allocator/block:testing",
        "//pw_unit_test",
    ],
)

cc_library(
    name = "test_harness",
    testonly = True,
    srcs = [
        "test_harness.cc",
    ],
    hdrs = [
        "public/pw_allocator/test_harness.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":allocator",
        "//pw_assert",
        "//pw_containers",
        "//pw_random",
        "//third_party/fuchsia:stdcompat",
    ],
)

cc_library(
    name = "fuzzing",
    testonly = True,
    srcs = [
        "fuzzing.cc",
    ],
    hdrs = [
        "public/pw_allocator/fuzzing.h",
    ],
    strip_include_prefix = "public",
    deps = [
        ":test_harness",
        "//pw_fuzzer:fuzztest",
    ],
)

# Tests

pw_cc_test(
    name = "allocator_as_pool_test",
    srcs = [
        "allocator_as_pool_test.cc",
    ],
    deps = [
        ":allocator_as_pool",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "allocator_test",
    srcs = [
        "allocator_test.cc",
    ],
    deps = [
        ":allocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "best_fit_test",
    srcs = ["best_fit_test.cc"],
    deps = [
        ":best_fit",
        ":best_fit_block_allocator",
        ":block_allocator_testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "bucket_allocator_test",
    srcs = ["bucket_allocator_test.cc"],
    deps = [
        ":block_allocator_testing",
        ":bucket_allocator",
        ":bucket_block_allocator",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "buddy_allocator_test",
    srcs = [
        "buddy_allocator_test.cc",
    ],
    deps = [
        ":buddy_allocator",
        ":fuzzing",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "buffer_test",
    srcs = [
        "buffer_test.cc",
    ],
    deps = [
        ":buffer",
        ":testing",
        "//pw_bytes",
        "//pw_result",
        "//third_party/fuchsia:stdcompat",
    ],
)

pw_cc_test(
    name = "bump_allocator_test",
    srcs = [
        "bump_allocator_test.cc",
    ],
    deps = [
        ":bump_allocator",
        ":testing",
        "//pw_unit_test",
        "//third_party/fuchsia:stdcompat",
    ],
)

pw_cc_test(
    name = "chunk_pool_test",
    srcs = [
        "chunk_pool_test.cc",
    ],
    deps = [
        ":chunk_pool",
        ":testing",
    ],
)

pw_cc_test(
    name = "fallback_allocator_test",
    srcs = [
        "fallback_allocator_test.cc",
    ],
    deps = [
        ":fallback_allocator",
        ":testing",
        "//pw_status",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "first_fit_test",
    srcs = ["first_fit_test.cc"],
    deps = [
        ":block_allocator_testing",
        ":buffer",
        ":dual_first_fit_block_allocator",
        ":first_fit",
        ":first_fit_block_allocator",
        ":last_fit_block_allocator",
        "//pw_unit_test",
        "//third_party/fuchsia:stdcompat",
    ],
)

pw_cc_test(
    name = "fragmentation_test",
    srcs = ["fragmentation_test.cc"],
    deps = [
        ":fragmentation",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "freelist_heap_test",
    srcs = [
        "freelist_heap_test.cc",
    ],
    deps = [
        ":freelist_heap",
        ":testing",
        "//pw_allocator/block:testing",
        "//pw_bytes:alignment",
        "//third_party/fuchsia:stdcompat",
    ],
)

pw_cc_test(
    name = "layout_test",
    srcs = ["layout_test.cc"],
    deps = [
        ":deallocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "libc_allocator_test",
    srcs = [
        "libc_allocator_test.cc",
    ],
    deps = [
        ":libc_allocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "null_allocator_test",
    srcs = [
        "null_allocator_test.cc",
    ],
    deps = [
        ":null_allocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "pmr_allocator_test",
    srcs = [
        "pmr_allocator_test.cc",
    ],
    deps = [
        ":pmr_allocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "synchronized_allocator_test",
    srcs = [
        "synchronized_allocator_test.cc",
    ],
    # TODO: b/358411629 - This test times out on rp2.
    target_compatible_with = select({
        "@pico-sdk//bazel/constraint:rp2040": ["@platforms//:incompatible"],
        "@pico-sdk//bazel/constraint:rp2350": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        ":synchronized_allocator",
        ":test_harness",
        ":testing",
        "//pw_random",
        "//pw_sync:binary_semaphore",
        "//pw_sync:interrupt_spin_lock",
        "//pw_sync:mutex",
        "//pw_sync:virtual_basic_lockable",
        "//pw_thread:test_thread_context",
        "//pw_thread:thread",
        "//pw_thread:thread_core",
        "//pw_thread:yield",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "tlsf_allocator_test",
    srcs = ["tlsf_allocator_test.cc"],
    deps = [
        ":block_allocator_testing",
        ":tlsf_allocator",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "tracking_allocator_test",
    srcs = [
        "tracking_allocator_test.cc",
    ],
    deps = [
        ":testing",
        ":tracking_allocator",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "typed_pool_test",
    srcs = [
        "typed_pool_test.cc",
    ],
    deps = [
        ":testing",
        ":typed_pool",
        "//pw_bytes:alignment",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "unique_ptr_test",
    srcs = ["unique_ptr_test.cc"],
    deps = [
        ":allocator",
        ":testing",
        "//pw_unit_test",
    ],
)

pw_cc_test(
    name = "worst_fit_test",
    srcs = ["worst_fit_test.cc"],
    deps = [
        ":block_allocator_testing",
        ":worst_fit",
        ":worst_fit_block_allocator",
        "//pw_unit_test",
    ],
)

cc_library(
    name = "size_reporter",
    hdrs = ["public/pw_allocator/size_reporter.h"],
    strip_include_prefix = "public",
    deps = [
        ":null_allocator",
        "//pw_bloat:bloat_this_binary",
        "//pw_bytes",
    ],
)

# Docs

filegroup(
    name = "doxygen",
    srcs = [
        "public/pw_allocator/allocator.h",
        "public/pw_allocator/allocator_as_pool.h",
        "public/pw_allocator/best_fit.h",
        "public/pw_allocator/block_allocator.h",
        "public/pw_allocator/bucket_allocator.h",
        "public/pw_allocator/buddy_allocator.h",
        "public/pw_allocator/buffer.h",
        "public/pw_allocator/bump_allocator.h",
        "public/pw_allocator/capability.h",
        "public/pw_allocator/chunk_pool.h",
        "public/pw_allocator/config.h",
        "public/pw_allocator/deallocator.h",
        "public/pw_allocator/fallback_allocator.h",
        "public/pw_allocator/first_fit.h",
        "public/pw_allocator/fragmentation.h",
        "public/pw_allocator/fuzzing.h",
        "public/pw_allocator/layout.h",
        "public/pw_allocator/libc_allocator.h",
        "public/pw_allocator/metrics.h",
        "public/pw_allocator/null_allocator.h",
        "public/pw_allocator/pmr_allocator.h",
        "public/pw_allocator/pool.h",
        "public/pw_allocator/size_reporter.h",
        "public/pw_allocator/synchronized_allocator.h",
        "public/pw_allocator/test_harness.h",
        "public/pw_allocator/testing.h",
        "public/pw_allocator/tlsf_allocator.h",
        "public/pw_allocator/tracking_allocator.h",
        "public/pw_allocator/typed_pool.h",
        "public/pw_allocator/unique_ptr.h",
        "public/pw_allocator/worst_fit.h",
        "//pw_allocator/block:doxygen",
        "//pw_allocator/bucket:doxygen",
    ],
)

sphinx_docs_library(
    name = "docs",
    srcs = [
        "api.rst",
        "code_size.rst",
        "design.rst",
        "docs.rst",
        "guide.rst",
        "//pw_allocator/examples:docs",
    ],
    prefix = "pw_allocator/",
    target_compatible_with = incompatible_with_mcu(),
)
